--- a/index.html
+++ b/index.html
@@ -179,29 +179,29 @@
             <h2>【采访照片】</h2>
             <div class="image-gallery">
                 <div class="image-container">
-                    <img src="image/1.JPG" alt="指导老师林诗颖与兰银才大师的合影">
+                    <img src="image/1.jpg" alt="指导老师林诗颖与兰银才大师的合影">
                     <p class="image-caption">指导老师林诗颖与兰银才大师的合影</p>
                 </div>
                 <div class="image-container">
-                    <img src="image/2.JPG" alt="福州市畲族服装传承示范基地">
+                    <img src="image/2.jpg" alt="福州市畲族服装传承示范基地">
                     <p class="image-caption">福州市畲族服装传承示范基地</p>
                 </div>
                 <div class="image-container">
-                    <img src="image/3.JPG" alt="福州市畲族服装传承示范基地">
+                    <img src="image/3.jpg" alt="福州市畲族服装传承示范基地">
                 </div>
                 <div class="image-container">
-                    <img src="image/4.JPG" alt="美丽多彩的畲服凤凰装">
+                    <img src="image/4.jpg" alt="美丽多彩的畲服凤凰装">
                     <p class="image-caption">美丽多彩的畲服凤凰装</p>
                 </div>
                 <div class="image-container">
-                    <img src="image/5.JPG" alt="美丽多彩的畲服凤凰装">
+                    <img src="image/5.jpg" alt="美丽多彩的畲服凤凰装">
                 </div>
                 <div class="image-container">
-                    <img src="image/6.JPG" alt="兰曲钗先生在制作凤凰装">
+                    <img src="image/6.jpg" alt="兰曲钗先生在制作凤凰装">
                     <p class="image-caption">兰曲钗先生在制作凤凰装</p>
                 </div>
                 <div class="image-container">
-                    <img src="image/7.JPG" alt="兰曲钗先生在制作凤凰装">
+                    <img src="image/7.jpg" alt="兰曲钗先生在制作凤凰装">
                 </div>
             </div>
         </div>
